WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18106
The "onscroll" event bubbles, which is inconsistent with Firefox and IE
https://bugs.webkit.org/show_bug.cgi?id=18106
Summary
The "onscroll" event bubbles, which is inconsistent with Firefox and IE
Fabian Jakobs
Reported
2008-03-26 02:17:39 PDT
"scroll" events of html elements do not bubble in Firefox and IE but do bubble in WebKit (rev. 31275). The scroll event is not standardized but I think WebKit should behave consistent with Firefox and IE. This bug has cost us some tricky debugging.
Attachments
Test case for this bug
(1.02 KB, text/html)
2008-03-26 02:19 PDT
,
Fabian Jakobs
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fabian Jakobs
Comment 1
2008-03-26 02:19:12 PDT
Created
attachment 20079
[details]
Test case for this bug If you scroll the text, an alert box is opened since the scroll event bubbles up to the body. In IE and Firefox the scroll event does not bubble up and no alert box is opened.
Alexey Proskuryakov
Comment 2
2008-03-28 03:38:07 PDT
Confirmed with Safari 3.1 (shipping) as a difference with Firefox 2.0.0.12.
Anders Carlsson
Comment 3
2008-07-14 12:58:17 PDT
<
rdar://problem/6073974
>
Anders Carlsson
Comment 4
2008-07-14 14:17:58 PDT
Committed revision 35168.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug