WebCore:

2008-07-14  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        <rdar://problem/6073974>
        https://bugs.webkit.org/show_bug.cgi?id=18106
        The "onscroll" event bubbles, which is inconsistent with Firefox and IE

        Don't bubble the scroll event.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::scrollToOffset):
        * rendering/RenderListBox.cpp:
        (WebCore::RenderListBox::valueChanged):

LayoutTests:

2008-07-14  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        <rdar://problem/6073974>
        https://bugs.webkit.org/show_bug.cgi?id=18106
        The "onscroll" event bubbles, which is inconsistent with Firefox and IE

        Add test.

        * fast/events/scroll-event-does-not-bubble-expected.txt: Added.
        * fast/events/scroll-event-does-not-bubble.html: Added.



Canonical link: https://commits.webkit.org/27600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35168 268f45cc-cd09-0410-ab3c-d52691b4dbfc